# finalProjectAML

./: README.md  app.py  main.py  pyproject.toml  run.sh
model/: pipeline_for_user_input.pkl  xgboost_model.pkl
