[project]
name = "strokepredictionproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "joblib>=1.5.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
